Mudanças nas nomenclaturas de classes

--- a/index.html
+++ b/index.html
@@ -16,34 +16,29 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    
+    <link rel="stylesheet" href="style.css">
 
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body>
     <div class="container">
-      <div class="card picture">
-        <div class="overlay"></div>
+        <div class="conteiner-img">
+            <div class="conteiner-img__overlay"></div>
+        </div>
+        <div class="card">
+          <h1 class="card__titulo">Get <span class="card__span">insights</span> that help your business grow.</h1>
+          <p class="card__subtitulo">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <ul class="lista">
+            <li><span class="lista__span">10K</span>component</li>
+            <li><span class="lista__span">365</span>Templates</li>
+            <li><span class="lista__span">12m+</span> queries</li>
+          </ul>
+        </div>
       </div>
-      <div class="card">
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-        <p>
-          Discover the benefits of data analytics and make better decisions
-          regarding revenue, customer experience, and overall efficiency.
-        </p>
-        <ul>
-          <li><span>10k+</span> companies</li>
-          <li><span>314</span> templates</li>
-          <li><span>12m+</span> queries</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/aydom669">Aydom</a>.
     </div>
   </body>
 </html>
